[gd_scene load_steps=8 format=2]

[ext_resource path="res://worlds/scenes/02.gd" type="Script" id=1]
[ext_resource path="res://characters/rika/rika.gd" type="Script" id=2]
[ext_resource path="res://characters/rika/rika.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 200, 100 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 100, 200 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2855, 657, 0, 0, 0, 0, 2855, 257, 0, 0, 0, 0, 3015, 129, 0, 0, 0, 0, 3519, 129, 0, 0, 0, 0, 3919, -311, 0, 0, 0, 0, 3919, -543, 0, 0, 0, 0, 3143, -543, 0, 0, 0, 0, 3143, -1215, 0, 0, 0, 0, 3911, -1215, 0, 0, 0, 0, 3911, -2879, 0, 0, 0, 0, 4032, -2880 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 3223, 129, 0, 0, 0, 0, 3519, 129, 0, 0, 0, 0, 3919, -311, 0, 0, 0, 0, 3919, -543, 0, 0, 0, 0, 3143, -543, 0, 0, 0, 0, 3143, -1215, 0, 0, 0, 0, 3911, -1215, 0, 0, 0, 0, 3911, -2879, 0, 0, 0, 0, 4032, -2880 )
}

[node name="02" type="Node2D"]
script = ExtResource( 1 )

[node name="Rika" type="KinematicBody2D" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Areas" type="Node2D" parent="."]

[node name="after_pincho_down" type="Area2D" parent="Areas"]
position = Vector2( 2951, 621 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/after_pincho_down"]
shape = SubResource( 5 )
disabled = true

[node name="after_pincho_right" type="Area2D" parent="Areas"]
position = Vector2( 3565, 65 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/after_pincho_right"]
shape = SubResource( 2 )
disabled = true

[node name="Points" type="Node2D" parent="."]

[node name="PinchoDown" type="Path2D" parent="Points"]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Points/PinchoDown"]
position = Vector2( 2855, 657 )
rotation = -1.5708
loop = false

[node name="PinchoRight" type="Path2D" parent="Points"]
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Points/PinchoRight"]
position = Vector2( 3223, 129 )
loop = false
